import { BaseModel } from './base.model';

export interface LearningPathModuleModel extends BaseModel {
  displayOrder: number;
}