import { BaseModel } from './base.model';

export interface ModulePrerequisiteModel extends BaseModel {
  // Acts as a clean relationship data structure carrier
}