import { BaseModel } from './base.model';

export interface ModuleKeyPointModel extends BaseModel {
  title: string;
  description?: string;
}